cluster-bootstrap/argocd/templates/dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "argocd.lab.paultibbetts.uk"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argocd.lab.paultibbetts.uk`) && Header(`Content-Type`, `application/grpc`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-server-tls
